<resources>
    <string name="app_name">Android Activity 2</string>
    <string name="action_settings">Settings</string>
    <string name="message">Hello World!</string>
    <string name="button1">Go to bye screen</string>
    <string name="button2">Go Back</string>
    <string name="messagePrint">Bye message:</string>
    <string name="messageR">Number of repetitions:</string>
    <string name="flag">Flag</string>
    <string name="messageBye">Bye World!</string>
    <string name="repeat">1</string>
    <string name="Error">Please complete the fields to continue</string>
</resources>
